--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
 </head>
 <body>
     <h1>Emaboot Chatbot</h1>
-    <input type="text" id="userInput" placeholder="Digite algo...">
-    <button onclick="sendMessage()">Enviar</button>
-    <p id="response"></p>
+    <form action="/chatbot" method="post">
+        <input type="text" name="term" placeholder="Digite um termo para buscar">
+        <button type="submit">Enviar</button>
+    </form>
 
-    <script>
-        async function sendMessage() {
-            const userInput = document.getElementById('userInput').value;
-            const responseElement = document.getElementById('response');
+    {% if results %}
+        <p>🤖 Emaboot: Documentos encontrados:</p>
+        <ul>
+        {% for i, title in enumerate(results) %}
+            <li>
+                <form action="/get_link" method="post">
+                    <input type="hidden" name="title" value="{{ title }}">
+                    <button type="submit">{{ title }}</button>
+                </form>
+            </li>
+        {% endfor %}
+        </ul>
+    {% endif %}
 
-            const response = await fetch('/chatbot', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ input: userInput })
-            });
-
-            const data = await response.json();
-            responseElement.innerText = data.response;
-        }
-    </script>
+    {% if link %}
+        <p>🤖 Emaboot: Aqui está o link: <a href="{{ link }}" target="_blank">{{ link }}</a></p>
+    {% endif %}
 </body>
 </html>
+
