--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emaboot Chatbot</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        h1 {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
+    <!-- Adicionando a imagem acima do título -->
+    <img src="path/to/your/image.png" alt="DIPLAN Logo">
     <h1>Emaboot Chatbot</h1>
-    <form action="/chatbot" method="post">
-        <input type="text" name="term" placeholder="Digite um termo para buscar">
-        <button type="submit">Enviar</button>
+
+    <!-- Restante do conteúdo -->
+    <form method="POST" action="/chatbot">
+        <label for="query">Digite as palavras-chave para buscar documentos:</label><br>
+        <input type="text" id="query" name="query" required>
+        <button type="submit">Buscar</button>
     </form>
-
-    {% if results %}
-        <p>🤖 Emaboot: Documentos encontrados:</p>
-        <ul>
-        {% for i, title in enumerate(results) %}
-            <li>
-                <form action="/get_link" method="post">
-                    <input type="hidden" name="title" value="{{ title }}">
-                    <button type="submit">{{ title }}</button>
-                </form>
-            </li>
-        {% endfor %}
-        </ul>
-    {% endif %}
-
-    {% if link %}
-        <p>🤖 Emaboot: Aqui está o link: <a href="{{ link }}" target="_blank">{{ link }}</a></p>
-    {% endif %}
 </body>
 </html>
-
