--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Adicionar a imagem -->
     <div style="text-align: center;">
-        <img src="{{ url_for('static', filename='images/DIPLAN.png') }}" alt="Emaboot Logo" style="width: 100%; max-width: 800px;">
+        <img src="/static/images/DIPLAN.png" alt="Emaboot Logo" style="width: 100%; max-width: 800px;">
     </div>
     
     <!-- Título do chatbot -->
